--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -11,7 +11,7 @@
 	<!-- Bootstrap -->	 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="my_css/style.css">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 
 
