--- a/quiz/templates/quiz/start.html
+++ b/quiz/templates/quiz/start.html
@@ -11,7 +11,7 @@
 	<!-- Bootstrap -->	 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="my_css/style.css">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 		<div class="row">
 			<div class="col-md-4 column">
 
-				<img class="img-circle" src="images/codemonkey.jpg">
+				<img class="img-circle" src="/static/codemonkey.jpg">
 				<h2> mitt apquiz</h2>
 				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
@@ -47,7 +47,7 @@
 
 			<div class="col-md-4 column">
 
-				<img class="img-circle" src="images/codemonkey.jpg">
+				<img class="img-circle" src="/static/codemonkey.jpg">
 				<h2> mitt apquiz</h2>
 				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
@@ -55,7 +55,7 @@
 
 			<div class="col-md-4 column">
 
-				<img class="img-circle" src="images/codemonkey.jpg">
+				<img class="img-circle" src="/static/codemonkey.jpg">
 				<h2> mitt apquiz</h2>
 				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
