#14 update in quiztemplate

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -16,11 +16,13 @@
 
 
 <body>
-	<h1>CODE QUIZ</h1>
+	<h1>{{ quiz.name }}</h1>
+
+	<p>{{ quiz.description }}</p>
 
 	<p>Get ready for a quiz about code!</p>
 	<p>This quiz will challenge you deeply within the worlds coding.</p>
-	<p> You will be given 8 different quiestions. Are you ready to start?</p>
+	<p>You will be given 8 different quiestions. Are you ready to start?</p>
 
 	<p><a href="question.html" rel="html">Code quiz</a></p>
 
