--- a/quiz/templates/quiz/startpage.html
+++ b/quiz/templates/quiz/startpage.html
@@ -19,7 +19,11 @@
 
 	<h3>Made by Tina Elvian!</h3>
 	
+	{% for quiz in quizzes %}
 
+			<p>{{quiz.name}}</p>
+
+	{% endfor %}
 
 	<div class="container">
 
@@ -69,7 +73,7 @@
 		<div class="row">
 			<div class="col-md-4"><p><a href="quiz.html" rel="html">Code quiz</a></p></div>
 			<div class="col-md-4 column2">
-				XX quiz
+				
 			</div>
 			<div class="col-md-4 column3"></div>
 		</div>
