#15 added some info on question template

--- a/quiz/templates/quiz/question.html
+++ b/quiz/templates/quiz/question.html
@@ -16,13 +16,19 @@
 
 <body>
 
-<h1>1. What does HTML stand for?</h1>
+<h1>{{ question_number }}. {{ question }}</h1>
+<p>{{ answer1 }}</p>
+<p>{{ answer2 }}</p>
+<p>{{ answer3 }}</p>
+
+
+<!-- <h1>1. What does HTML stand for?</h1>
 
 <ul>
 	<li> Home Tool Markup Language </li>
 	<li> Hyperlinks and Text Markup Language </li> 
 	<li> Hyper Text Markup Language </li>
-</ul>	
+</ul> -->
 		
 	
 
