added a score in completedfolder

--- a/quiz/templates/quiz/completed.html
+++ b/quiz/templates/quiz/completed.html
@@ -16,10 +16,11 @@
 
 <body>
 
- 	<h1>RESULTS</h1>
- 	<h3>Well done on finishing the quiz!</h3>
+ 	<h1>Du är klar och fick {{ correct }} av {{ total }}</h1>
+
+ 	<!--<h3>Well done on finishing the quiz!</h3>
  	<p>You're results are the following</p>
- 	<p>Results: xxx </p>
+ 	<p>Results: xxx </p>-->
 </body>
 
 
