#17, #18. Linked all the pages together

--- a/quiz/templates/quiz/question.html
+++ b/quiz/templates/quiz/question.html
@@ -21,6 +21,7 @@
 <p>{{ answer2 }}</p>
 <p>{{ answer3 }}</p>
 
+<p><a href="{% url 'completed_page' quiz_number %}">Nästa</a></p>
 
 <!-- <h1>1. What does HTML stand for?</h1>
 
