--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -24,9 +24,11 @@
 	<p>This quiz will challenge you deeply within the worlds coding.</p>
 	<p>You will be given 8 different quiestions. Are you ready to start?</p>
 
-	<p><a href="question.html" rel="html">Code quiz</a></p>
+	<!--<p><a href="question.html" rel="html">Code quiz</a></p>
 
 	<!-- Lägg till en länk för att starta quizen -->	
+
+	<p><a href="{% url 'question_page' quiz_number 1 %}">Starta</a></p>
 
 </body>
 
