--- a/quiz/templates/quiz/results.html
+++ b/quiz/templates/quiz/results.html
@@ -16,14 +16,10 @@
 
 <body>
 
- 	<h1>Du är klar och fick {{ correct }} av {{ total }}</h1>
-
- 	
-<p><a href="{% url 'start_page' %}">Till startsidan</a></p>
-
- 	<!--<h3>Well done on finishing the quiz!</h3>
+ 	<h1>RESULTS</h1>
+ 	<h3>Well done on finishing the quiz!</h3>
  	<p>You're results are the following</p>
- 	<p>Results: xxx </p>-->
+ 	<p>Results: xxx </p>
 </body>
 
 
