--- a/quiz/templates/quiz/start.html
+++ b/quiz/templates/quiz/start.html
@@ -17,15 +17,9 @@
 <body>
 	<h1>TIME FOR A QUIZ</h1>
 
-	<h3>Made by popcornbrain!</h3>
+	<h3>Made by Tina Elvian!</h3>
 	
-	{% for quiz in quizzes %}
 
-			<p><a href="{% url 'quiz_page' quiz.quiz_number %}">
-			{{quiz.name}}
-			</a></p>
-
-	{% endfor %}
 
 	<div class="container">
 
@@ -46,24 +40,24 @@
 			<div class="col-md-4 column">
 
 				<img class="img-circle" src="/static/codemonkey.jpg">
-				<h2> Code quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
+				<h2> mitt apquiz</h2>
+				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
 			</div>
 
 			<div class="col-md-4 column">
 
 				<img class="img-circle" src="/static/codemonkey.jpg">
-				<h2> XX Quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
+				<h2> mitt apquiz</h2>
+				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
 			</div>
 
 			<div class="col-md-4 column">
 
 				<img class="img-circle" src="/static/codemonkey.jpg">
-				<h2> XX Quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
+				<h2> mitt apquiz</h2>
+				<a class="btn btn-lg btn-primary" href="#" role="button">Till quiz</a>
 
 			</div>
 
@@ -75,7 +69,7 @@
 		<div class="row">
 			<div class="col-md-4"><p><a href="quiz.html" rel="html">Code quiz</a></p></div>
 			<div class="col-md-4 column2">
-				
+				XX quiz
 			</div>
 			<div class="col-md-4 column3"></div>
 		</div>
