--- a/quiz/templates/quiz/startpage.html
+++ b/quiz/templates/quiz/startpage.html
@@ -9,10 +9,12 @@
 
 
 	<!-- Bootstrap -->	 
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="/static/style.css">
 </head>
+
+<!--CREATE THE BODY-->
 
 <body>
 	<h1>TIME FOR A QUIZ</h1>
@@ -45,7 +47,7 @@
 		<div class="row">
 			<div class="col-md-4 column">
 
-				<img class="img-circle" src="/static/codemonkey.jpg">
+				<img class="img-circle" src="/static/monkey_square_medium.jpg">
 				<h2> Code quiz</h2>
 				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
 
