New images on startpage

--- a/quiz/templates/quiz/startpage.html
+++ b/quiz/templates/quiz/startpage.html
@@ -47,32 +47,32 @@
 		<div class="row">
 			<div class="col-md-4 column">
 
+				<img class="img-circle" src="/static/female_coder_medium.jpg">
+				<h2>Know your women in tech?</h2>
+
+		
+				<a class="button-lg" href="#" role="button">To Quiz</a>
+
+			</div>
+
+			<div class="col-md-4 column">
+
 				<img class="img-circle" src="/static/monkey_square_medium.jpg">
-				<h2> Code quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
+				<h2>Code Monkey wonders if you know your html?</h2>
+				<a class="button-lg" href="#FFFFFF" role="button">To Quiz</a>
 
 			</div>
 
 			<div class="col-md-4 column">
 
-				<img class="img-circle" src="/static/codemonkey.jpg">
-				<h2> XX Quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
-
-			</div>
-
-			<div class="col-md-4 column">
-
-				<img class="img-circle" src="/static/codemonkey.jpg">
-				<h2> XX Quiz</h2>
-				<a class="btn btn-lg btn-primary" href="#" role="button">To Quiz</a>
+				<img class="img-circle" src="/static/future_tech.jpg">
+				<h2>Know what the future holds within the tech industry</h2>
+				<a class="button-lg" href="#" role="button">To Quiz</a>
 
 			</div>
 
 
 		</div>
-
-
 
 		<div class="row">
 			<div class="col-md-4"><p><a href="quiz.html" rel="html">Code quiz</a></p></div>
