--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
 	background: url('/static/pink_background.jpg');
 	background-size: cover;
 
-	font: 12pt/1.4 "Helvetica Neue", "Helvetica", serif; 
+	font: 12pt/1.4 "Bebas Neue Bold", "Helvetica", serif; 
 	max-width: 600px
 	margin: 0 auto;
 }
@@ -13,10 +13,15 @@ body {
 	text-align: center;
 }
 
+.header {
 
+	padding: 55px;
+	border: 0px;
+	margin: 0px;
+}
 
 h1 {
-	color: #FF9999;
+	color: #FFFFFF;
 	text-align: center;
 }
 h2 {
@@ -30,16 +35,24 @@ h1 {
 }
 .button-lg {
 	background-color: #FFFFFF;
-	border-color: #F2F2F2;
 	padding: 10px 16px;
 	font-size: 18px;
 	line-height: 1.3333333;
 	border-radius: 6px;
 }
 
-a {
-	color: #FF3333;
+a:link {
+color: #FFFFFF;
+text-decoration: none;
+} 
+a:visited {
+color: #000;
+text-decoration: none;
 }
+a:hover {
+color: #999999;
+}
+
 
 p	{
 	border-bottom: 1px solid #FF9999
