--- a/quiz/templates/quiz/startpage.html
+++ b/quiz/templates/quiz/startpage.html
@@ -19,8 +19,8 @@
 <body>
 
 	<div class="header">
-		<h1>TIME FOR QUIZ</h1>
-
+		<h1>LADIES AND GENTLEMEN</h1>
+		<h1>It's quiz time</h1>
 	</div>
 
 	<!--<h3>Made by popcornbrain!</h3>-->
@@ -55,7 +55,7 @@
 			<div class="col-md-4 column">
 
 				<img class="img-circle" src="/static/monkey_square_medium.jpg">
-				<h2>Code Monkey wonders if you know your html?</h2>
+				<h2>Are you a true code monkey?</h2>
 				<a class="button-lg" href="#000000" role="button">To Quiz</a>
 
 			</div>
@@ -63,7 +63,7 @@
 			<div class="col-md-4 column">
 
 				<img class="img-circle" src="/static/future_tech.jpg">
-				<h2>Know what the future holds within the tech industry?</h2>
+				<h2>Are you up to date on the future tech products?</h2>
 				<a class="button-lg" href="#" role="button">To Quiz</a>
 
 			</div>
