--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ body {
 
 .header {
 
-	padding: 55px;
+	padding: 30px;
 	border: 0px;
 	margin: 0px;
 }
@@ -42,7 +42,7 @@ h1 {
 }
 
 a:link {
-color: #FFFFFF;
+color: #000000;
 text-decoration: none;
 } 
 a:visited {
