redirected bootstrap to correct folder

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -9,7 +9,7 @@
 
 
 	<!-- Bootstrap -->	 
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="/static/style.css">
 </head>
@@ -20,9 +20,7 @@
 
 	<p>{{ quiz.description }}</p>
 
-	<p>Get ready for a quiz about code!</p>
-	<p>This quiz will challenge you deeply within the worlds coding.</p>
-	<p>You will be given 8 different quiestions. Are you ready to start?</p>
+
 
 	<!--<p><a href="question.html" rel="html">Code quiz</a></p>
 
