--- a/quiz/templates/quiz/question.html
+++ b/quiz/templates/quiz/question.html
@@ -14,14 +14,21 @@
 	<link rel="stylesheet" href="/static/style.css">
 </head>
 
+
 <body>
 
-<h1>{{ question_number }}. {{ question }}</h1>
-<p>{{ answer1 }}</p>
-<p>{{ answer2 }}</p>
-<p>{{ answer3 }}</p>
+	<form action="{% url "answer_page" quiz.quiz_number question_number %}" method="post">
+	{% csrf_token %}
 
-<p><a href="{% url 'completed_page' quiz_number %}">Nästa</a></p>
+
+
+<h1>{{ question_number }}. {{ question }}</h1>
+<input type="radio" name="answer" value="1"/>{{ answer1 }}
+<input type="radio" name="answer" value="2"/>{{ answer2 }}
+<input type="radio" name="answer" value="3"/>{{ answer3 }}
+
+<button type="submit">Next</button>
+</form>
 
 <!-- <h1>1. What does HTML stand for?</h1>
 
