--- a/quiz/templates/quiz/startpage.html
+++ b/quiz/templates/quiz/startpage.html
@@ -56,7 +56,7 @@
 
 				<img class="img-circle" src="/static/monkey_square_medium.jpg">
 				<h2>Are you a true code monkey?</h2>
-				<a class="button-lg" href="#000000" role="button">To Quiz</a>
+				<a href="{% url 'quiz_page' quiz.quiz_number %}" class="button-lg" href="#000000" role="button">To Quiz</a>
 
 			</div>
 
